--- a/dillo/src/templates/admin/index.jade
+++ b/dillo/src/templates/admin/index.jade
@@ -16,7 +16,7 @@ style(type="text/css").
 
 | {% block body %}
 .row
-	.span2
+	.span3
 		h4 Settings
 		form(
 			role="form",
@@ -24,26 +24,50 @@ style(type="text/css").
 			enctype="multipart/form-data",
 			action="{{url_for('admin.settings')}}")
 
-			| {{ form_logo.hidden_tag() }}
+			| {{ form_settings.hidden_tag() }}
+
+			img(src="{{ settings['logo']['image'] }}")
 
 			.form-group
-				| {{ form_logo.logo_alt.label }}
-				| {{ form_logo.logo_alt(class='form-control', placeholder='Image alt tag') }}
+				| {{ form_settings.logo_image.label }}
+				| {{ form_settings.logo_image(class='form-control') }}
 
-				| {% if form_logo.logo_alt.errors %}
+				| {% if form_settings.logo_image.errors %}
 				ul.error
-					| {% for error in form_logo.logo_alt.errors %}
+					| {% for error in form_settings.logo_image.errors %}
 					li {{ error }}
 					| {% endfor %}
 				| {% endif %}
 
 			.form-group
-				| {{ form_logo.logo_image.label }}
-				| {{ form_logo.logo_image(class='form-control') }}
+				| {{ form_settings.logo_alt.label }}
+				| {{ form_settings.logo_alt(class='form-control', placeholder='Image alt tag') }}
 
-				| {% if form_logo.logo_image.errors %}
+				| {% if form_settings.logo_alt.errors %}
 				ul.error
-					| {% for error in form_logo.logo_image.errors %}
+					| {% for error in form_settings.logo_alt.errors %}
+					li {{ error }}
+					| {% endfor %}
+				| {% endif %}
+
+			.form-group
+				| {{ form_settings.title.label }}
+				| {{ form_settings.title(class='form-control') }}
+
+				| {% if form_settings.title.errors %}
+				ul.error
+					| {% for error in form_settings.title.errors %}
+					li {{ error }}
+					| {% endfor %}
+				| {% endif %}
+
+			.form-group
+				| {{ form_settings.tagline.label }}
+				| {{ form_settings.tagline(class='form-control') }}
+
+				| {% if form_settings.tagline.errors %}
+				ul.error
+					| {% for error in form_settings.tagline.errors %}
 					li {{ error }}
 					| {% endfor %}
 				| {% endif %}
