--- a/dillo/src/templates/security/login_user.jade
+++ b/dillo/src/templates/security/login_user.jade
@@ -1,5 +1,5 @@
 | {% extends 'layout.html' %}
-| {% from "security/_macros.html" import render_field_with_errors, render_login_field_with_errors, render_register_field_with_errors, render_field %}
+| {% from "security/_macros.html" import render_login_field_with_errors, render_field %}
 
 | {% block page_title %} Welcome! {% endblock %}
 
@@ -58,12 +58,12 @@
 								.input-group
 									span.input-group-addon
 										i.fa.fa-envelope-o.fa-fw
-										| {{ render_login_field_with_errors(login_user_form.email, class='form-control', placeholder="E-mail") }}
+									| {{ render_login_field_with_errors(login_user_form.email, class='form-control', placeholder="E-mail") }}
 
 								.input-group
 									span.input-group-addon
 										i.fa.fa-lock.fa-fw
-										| {{ render_login_field_with_errors(login_user_form.password, class='form-control', placeholder="Password") }}
+									| {{ render_login_field_with_errors(login_user_form.password, class='form-control', placeholder="Password") }}
 
 								| {{ render_field(login_user_form.next) }}
 
