--- a/dillo/src/templates/security/login_user.jade
+++ b/dillo/src/templates/security/login_user.jade
@@ -11,7 +11,7 @@
 				.col-md-12
 					.user-login-branding
 						a(href="{{url_for('index')}}")
-							img.user-login-branding-mug(
+							img.user-login-branding-logo(
 								src="{{ settings['logo']['image'] }}")
 
 						a(href="{{url_for('index')}}")
