--- a/dillo/src/templates/layout.jade
+++ b/dillo/src/templates/layout.jade
@@ -8,17 +8,19 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		meta(name="viewport",
 				 content="width=device-width, initial-scale=1")
 
+		| {# XXX Add title setting #}
 		title {% block page_title %}{% endblock %}Blender.Today - Community-driven Blender News
 
+		| {# XXX Add keywords setting #}
 		meta(name="keywords", content="news, community, blender, animation, 3d")
-		meta(name="description", content="Community-driven Blender News")
-		meta(name="author", content="Blender Today")
+		meta(name="description", content="{{ settings['tagline']}}")
+		meta(name="author", content="{{ settings['title'] | safe}}")
 		meta(name="theme-color", content="#4D84A0")
 		meta(name="csrf-token", content="{{ csrf_token() }}")
 
 		// Open Graph
-		meta(property="og:site_name", content="Blender.Today")
-		meta(property="og:description", content="Community-driven Blender News")
+		meta(property="og:site_name", content="{{ settings['title'] | safe}}")
+		meta(property="og:description", content="{{ settings['tagline']}}")
 		| {% block og %}{% endblock %}
 
 		// Styles
