Template for Register page

--- a/dillo/src/templates/errors/404.jade
+++ b/dillo/src/templates/errors/404.jade
@@ -32,7 +32,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 
 	body.error-404
 
-		{# XXX - User setting for 404 image #}
+		| {# XXX - User setting for 404 image #}
 		img.img-responsive(src="{{ url_for('static', filename='images/today_404_andy.jpg') }}")
 
 		h2 404 - This page doesn't exist
