--- a/dillo/src/templates/security/login_user.jade
+++ b/dillo/src/templates/security/login_user.jade
@@ -12,7 +12,8 @@
 					.user-login-branding
 						a(href="{{url_for('index')}}")
 							img.user-login-branding-logo(
-								src="{{ settings['logo']['image'] }}")
+								src="{{ settings['logo']['image'] }}",
+								title="{{ settings['title'] | safe}}")
 
 						a(href="{{url_for('index')}}")
 							h3 {{ settings['title'] | safe}}
