--- a/dillo/src/templates/posts/view.jade
+++ b/dillo/src/templates/posts/view.jade
@@ -593,7 +593,7 @@ script(type="text/javascript").
 			<div class="row"> \
 				<div class="col-md-1 col-sm-1 col-xs-2">\
 					<div class="post-view-comments-avatar">\
-						<img src="' + comment['gravatar'] + '" class="img-circle op">\
+						<img src="' + comment['gravatar'] + '" class="op">\
 					</div>\
 				</div>\
 				<div class="col-md-11 col-sm-11 col-xs-10">\
