--- a/dillo/src/templates/settings/profile.jade
+++ b/dillo/src/templates/settings/profile.jade
@@ -58,7 +58,7 @@
 							.user-settings-avatar
 								a(href="http://gravatar.com",
 									target="_blank")
-									img.img-circle(
+									img(
 										src="{{current_user.gravatar(size=128)}}"
 										title="Gravatar Profile Picture")
 									small Change Gravatar
