--- a/dillo/src/styles/main.sass
+++ b/dillo/src/styles/main.sass
@@ -1975,9 +1975,13 @@ div#post-comment-reply-container
 		position: absolute
 		top: 10px
 		left: -5px
+
 		& img
 			padding: 4px
 			background-color: white
+			border-radius: 50%
+			width: 128px
+			height: 128px
 			+box-shadow(1px, 2px, 2px, darken($color_background, 5%), 1.0)
 
 			+media-xs
@@ -2172,6 +2176,7 @@ div#post-comment-reply-container
 	text-align: center
 	& img
 		padding: 5px
+		border-radius: 50%
 		+box-shadow(2px, 2px, 0, black, .1)
 	& small
 		display: block
