--- a/dillo/src/templates/posts/index.jade
+++ b/dillo/src/templates/posts/index.jade
@@ -3,7 +3,7 @@
 
 | {% block og %}
 meta(property="og:type", content="website")
-meta(property="og:title", content="{{ settings['title'] | safe}}")
+meta(property="og:title", content="{{ config.SETTINGS_TITLE | safe}}")
 meta(property="og:url", content="{{url_for('index')}}")
 meta(property="og:image", content="{{ url_for('static', filename='images/favicon_192x192.png') }}")
 | {% endblock %}
