--- a/dillo/src/templates/security/login_user.jade
+++ b/dillo/src/templates/security/login_user.jade
@@ -12,11 +12,11 @@
 					.user-login-branding
 						a(href="{{url_for('index')}}")
 							img.user-login-branding-logo(
-								src="{{ settings['logo']['image'] }}",
-								title="{{ settings['title'] | safe}}")
+								src="{{ config.SETTINGS_LOGO_IMAGE }}",
+								title="{{ config.SETTINGS_TITLE | safe}}")
 
 						a(href="{{url_for('index')}}")
-							h3 {{ settings['title'] | safe}}
+							h3 {{ config.SETTINGS_TITLE | safe}}
 
 
 					h2 welcome
