--- a/dillo/src/templates/_sidebar.jade
+++ b/dillo/src/templates/_sidebar.jade
@@ -98,15 +98,15 @@
 	// Logo
 	.nav-sidebar.branding
 
-		a(href="{{url_for('index')}}", title="{{ settings['title'] | safe}}")
+		a(href="{{url_for('index')}}", title="{{ config.SETTINGS_TITLE | safe }}")
 			img.nav-sidebar-logo(
-				src="{{ settings['logo']['image'] }}",
-				title="{{ settings['logo']['alt'] }}")
+				src="{{ config.SETTINGS_LOGO_IMAGE }}",
+				title="{{ config.SETTINGS_LOGO_ALT }}")
 
 		a(href="{{url_for('index')}}")
-			h3 {{ settings['title'] | safe}}
+			h3 {{ config.SETTINGS_TITLE_HTML | safe }}
 
-		p {{ settings['tagline']}}
+		p {{ config.SETTINGS_TAGLINE }}
 
 
 	// Links on the bottom
