--- a/dillo/src/templates/errors/404.jade
+++ b/dillo/src/templates/errors/404.jade
@@ -5,16 +5,16 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 
-		title 404 - {{ settings['title'] | safe}}
+		title 404 - {{ config.SETTINGS_TITLE | safe}}
 
-		meta(name="description", content="{{ settings['tagline']}}")
-		meta(name="author", content="{{ settings['title'] | safe}}")
+		meta(name="description", content="{{ config.SETTINGS_TAGLINE}}")
+		meta(name="author", content="{{ config.SETTINGS_TITLE | safe}}")
 		meta(name="theme-color", content="#4D84A0")
 		meta(name="csrf-token", content="{{ csrf_token() }}")
 
 		// Open Graph
-		meta(property="og:site_name", content="{{ settings['title'] | safe}}")
-		meta(property="og:description", content="{{ settings['tagline']}}")
+		meta(property="og:site_name", content="{{ config.SETTINGS_TITLE | safe}}")
+		meta(property="og:description", content="{{ config.SETTINGS_TAGLINE}}")
 		| {% block og %}{% endblock %}
 
 		// Style sheets
@@ -38,4 +38,4 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		h2 404 - This page doesn't exist
 		.error-goback
 			a(href="{{url_for('index')}}").
-				<i class="fa fa-angle-left"></i>  back to {{ settings['title'] | safe}}
+				<i class="fa fa-angle-left"></i>  back to {{ config.SETTINGS_TITLE | safe}}
