--- a/dillo/src/templates/layout.jade
+++ b/dillo/src/templates/layout.jade
@@ -13,14 +13,14 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 
 		| {# XXX Add keywords setting #}
 		meta(name="keywords", content="news, community, blender, animation, 3d")
-		meta(name="description", content="{{ settings['tagline']}}")
-		meta(name="author", content="{{ settings['title'] | safe}}")
+		meta(name="description", content="{{ config.SETTINGS_TAGLINE }}")
+		meta(name="author", content="{{ config.SETTINGS_TITLE | safe }}")
 		meta(name="theme-color", content="#4D84A0")
 		meta(name="csrf-token", content="{{ csrf_token() }}")
 
 		// Open Graph
-		meta(property="og:site_name", content="{{ settings['title'] | safe}}")
-		meta(property="og:description", content="{{ settings['tagline']}}")
+		meta(property="og:site_name", content="{{ config.SETTINGS_TITLE | safe }}")
+		meta(property="og:description", content="{{ config.SETTINGS_TAGLINE }}}")
 		| {% block og %}{% endblock %}
 
 		// Styles
