--- a/dillo/src/templates/posts/view.jade
+++ b/dillo/src/templates/posts/view.jade
@@ -3,7 +3,7 @@
 
 | {% block og %}
 meta(property="og:type", content="article")
-meta(property="og:title", content="{{post.title}} - {{ settings['title'] | safe}}")
+meta(property="og:title", content="{{post.title}} - {{ config.SETTINGS_TITLE | safe}}")
 meta(property="og:url",
 		 content="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}")
 
@@ -214,7 +214,7 @@ link(href="https://cdnjs.cloudflare.com/ajax/libs/jquery.swipebox/1.3.0.2/css/sw
 
 										a.pop(
 											title="Share via Email",
-											href="mailto:?subject={{post.title}}&body={{post.title}} on {{ settings['title'] | safe}} | {{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug, _external=True)}}",
+											href="mailto:?subject={{post.title}}&body={{post.title}} on {{ config.SETTINGS_TITLE | safe}} | {{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug, _external=True)}}",
 											target="_blank")
 											i.fa.fa-envelope-o
 
