--- a/dillo/src/templates/admin/index.jade
+++ b/dillo/src/templates/admin/index.jade
@@ -15,9 +15,12 @@ style(type="text/css").
 | {% endblock %}
 
 | {% block body %}
-.row
-	.span4
-		h3 Settings
+.row.admin
+	.span12
+		h2 Dillo Settings
+
+		hr
+
 		form(
 			role="form",
 			method="POST",
@@ -26,84 +29,105 @@ style(type="text/css").
 
 			| {{ form_settings.hidden_tag() }}
 
-			img(src="{{ config.SETTINGS_LOGO_IMAGE }}")
+			.row
+				.span6
 
-			.form-group
-				| {{ form_settings.logo_image.label }}
-				| {{ form_settings.logo_image(class='form-control') }}
+					h3 Title & Tagline
 
-				| {% if form_settings.logo_image.errors %}
-				ul.error
-					| {% for error in form_settings.logo_image.errors %}
-					li {{ error }}
-					| {% endfor %}
-				| {% endif %}
+					.form-group
+						| {{ form_settings.title.label }}
+						| {{ form_settings.title(class='form-control', style="width: 100%") }}
 
-			.form-group
-				| {{ form_settings.logo_alt.label }}
-				| {{ form_settings.logo_alt(class='form-control', placeholder='Image alt tag') }}
+						| {% if form_settings.title.errors %}
+						ul.error
+							| {% for error in form_settings.title.errors %}
+							li {{ error }}
+							| {% endfor %}
+						| {% endif %}
 
-				| {% if form_settings.logo_alt.errors %}
-				ul.error
-					| {% for error in form_settings.logo_alt.errors %}
-					li {{ error }}
-					| {% endfor %}
-				| {% endif %}
+					.form-group
+						| {{ form_settings.tagline.label }}
+						| {{ form_settings.tagline(class='form-control', style="width: 100%") }}
 
-			.form-group
-				| {{ form_settings.title.label }}
-				| {{ form_settings.title(class='form-control') }}
+						| {% if form_settings.tagline.errors %}
+						ul.error
+							| {% for error in form_settings.tagline.errors %}
+							li {{ error }}
+							| {% endfor %}
+						| {% endif %}
 
-				| {% if form_settings.title.errors %}
-				ul.error
-					| {% for error in form_settings.title.errors %}
-					li {{ error }}
-					| {% endfor %}
-				| {% endif %}
+					hr
 
-			.form-group
-				| {{ form_settings.title_html.label }}
-				| {{ form_settings.title_html(class='form-control') }}
+					p.
+						This is a special version of the title that allows some HTML,
+						such as <em>small</em>, <em>i</em>, and other tags, it's used everywhere
+						the main logo is displayed, such as sidebar, login or register pages.
 
-				| {% if form_settings.title_html.errors %}
-				ul.error
-					| {% for error in form_settings.title_html.errors %}
-					li {{ error }}
-					| {% endfor %}
-				| {% endif %}
+					.form-group
+						| {{ form_settings.title_html.label }}
+						| {{ form_settings.title_html(class='form-control', style="width: 100%") }}
 
-			.form-group
-				| {{ form_settings.tagline.label }}
-				| {{ form_settings.tagline(class='form-control') }}
+						| {% if form_settings.title_html.errors %}
+						ul.error
+							| {% for error in form_settings.title_html.errors %}
+							li {{ error }}
+							| {% endfor %}
+						| {% endif %}
 
-				| {% if form_settings.tagline.errors %}
-				ul.error
-					| {% for error in form_settings.tagline.errors %}
-					li {{ error }}
-					| {% endfor %}
-				| {% endif %}
+				.span6.text-center
+					h3 Logo
 
-			.form-group
-				| {{ form_settings.footer.label }}
-				| {{ form_settings.footer(class='form-control') }}
+					img(src="{{ config.SETTINGS_LOGO_IMAGE }}")
+					.form-group
+						| {{ form_settings.logo_image.label }}
+						| {{ form_settings.logo_image(class='form-control', style="width: 80%") }}
 
-				| {% if form_settings.footer.errors %}
-				ul.error
-					| {% for error in form_settings.footer.errors %}
-					li {{ error }}
-					| {% endfor %}
-				| {% endif %}
+						| {% if form_settings.logo_image.errors %}
+						ul.error
+							| {% for error in form_settings.logo_image.errors %}
+							li {{ error }}
+							| {% endfor %}
+						| {% endif %}
 
-			.form-group
-				| {{ form_settings.credits.label }}
-				| {{ form_settings.credits(class='form-control') }}
+					.form-group
+						| {{ form_settings.logo_alt.label }}
+						| {{ form_settings.logo_alt(class='form-control', placeholder='Image alt tag', style="width: 80%") }}
 
-				| {% if form_settings.credits.errors %}
-				ul.error
-					| {% for error in form_settings.credits.errors %}
-					li {{ error }}
-					| {% endfor %}
-				| {% endif %}
+						| {% if form_settings.logo_alt.errors %}
+						ul.error
+							| {% for error in form_settings.logo_alt.errors %}
+							li {{ error }}
+							| {% endfor %}
+						| {% endif %}
+
+			.row
+				.span12
+					hr
+
+					h3 Footer
+					.form-group
+						| {{ form_settings.footer.label }}
+						| {{ form_settings.footer(class='form-control', rows='8', style="width: 100%") }}
+
+						| {% if form_settings.footer.errors %}
+						ul.error
+							| {% for error in form_settings.footer.errors %}
+							li {{ error }}
+							| {% endfor %}
+						| {% endif %}
+
+					.form-group
+						| {{ form_settings.credits.label }}
+						| {{ form_settings.credits(class='form-control', style="width: 100%") }}
+
+						| {% if form_settings.credits.errors %}
+						ul.error
+							| {% for error in form_settings.credits.errors %}
+							li {{ error }}
+							| {% endfor %}
+						| {% endif %}
+
+					hr
 
 			button.btn.btn-success.btn-block(type="submit") Save Changes
 
