--- a/dillo/src/templates/layout.jade
+++ b/dillo/src/templates/layout.jade
@@ -66,57 +66,12 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 
 
 		// Footer
-		.container
-			.row.page-footer
-				.col-md-6
-
-					h3 About
-
-					p.
-						In a nutshell, Blender.Today is community-driven
-						<a href="http://www.blender.org">Blender</a> news.
-
-					p.
-						If you don't know what <a href="http://www.blender.org">Blender</a> is,
-						then you should probably go, or not! Stay and hangout, we have cookies.
-						Just keep in mind this site is run by the community. You're free to share
-						what's up, upvote the awesomeness or even downvote if it's not your thing.
-
-				.col-md-6
-
-					h3 Contact
-
-					p.
-						We're on Twitter <a href="http://twitter.com/BlenderToday">@BlenderToday</a>,
-						or <a href="http://facebook.com/BlenderToday">Facebook</a> too, if you're into that.
-
-					hr
-
-					h3 Moar Blender Stuff
-
-					ul
-						li
-							a(href="https://cloud.blender.org") Blender Cloud
-							| - All the open content and training you ever wanted
-						li
-							a(href="https://www.blendernetwork.org") Blender Network
-							| - Online directory of Blender Professionals and Certified Trainers
-
-						li
-							a(href="https://www.blender.org/e-shop") Blender E-shop
-							| - Education & swag deals that keep Blender Foundation afloat
+		.container.page-footer
+			| {{config.SETTINGS_FOOTER|safe}}
 
 		footer
 			.container
-				a(href="{{url_for('about')}}") About
-				| ·
-				a(href="{{url_for('faq')}}") FAQ
-				| ·
-				a(href="{{url_for('terms')}}") Terms
-				| · Made with <i class="fa fa-heart-o"></i> in Amsterdam
-				| · Blender Today 2015
-				| · Cutest mug by <a href="http://www.manujarvinen.com/" target="_blank">Manu</a>,
-				| 404 by <a href="http://www.artificial3d.com/" target="_blank">Andy</a>
+				| {{config.SETTINGS_CREDITS|safe}}
 
 		// Submit Dialog
 		div#submit.dialog
