Dillo logo and favicon images

--- a/dillo/src/templates/errors/404.jade
+++ b/dillo/src/templates/errors/404.jade
@@ -33,7 +33,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 	body.error-404
 
 		| {# XXX - User setting for 404 image #}
-		img.img-responsive(src="{{ url_for('static', filename='images/today_404_andy.jpg') }}")
+		img.img-responsive(src="{{ url_for('static', filename='images/404.jpg') }}")
 
 		h2 404 - This page doesn't exist
 		.error-goback
