--- a/dillo/src/templates/layout.jade
+++ b/dillo/src/templates/layout.jade
@@ -8,11 +8,9 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		meta(name="viewport",
 				 content="width=device-width, initial-scale=1")
 
-		| {# XXX Add title setting #}
-		title {% block page_title %}{% endblock %}Blender.Today - Community-driven Blender News
+		title {% block page_title %}{% endblock %}{{ config.SETTINGS_TITLE | safe }} - {{ config.SETTINGS_TAGLINE }}}
 
-		| {# XXX Add keywords setting #}
-		meta(name="keywords", content="news, community, blender, animation, 3d")
+		meta(name="keywords", content="{{ config.SETTINGS_KEYWORDS }}")
 		meta(name="description", content="{{ config.SETTINGS_TAGLINE }}")
 		meta(name="author", content="{{ config.SETTINGS_TITLE | safe }}")
 		meta(name="theme-color", content="#4D84A0")
@@ -32,7 +30,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		link(href='//fonts.googleapis.com/css?family=Open+Sans:400&subset=latin,latin-ext', rel='stylesheet', type='text/css')
 		link(href='//fonts.googleapis.com/css?family=Oxygen:400,300&subset=latin,latin-ext', rel='stylesheet', type='text/css')
 
-		link(href="{{ url_for('static', filename='images/favicon_192x192.png') }}", rel="icon", type="image/png")
+		link(href="{{ config.SETTINGS_FAVICON }}", rel="icon", type="image/png")
 
 		| {% block header %}{% endblock %}
 
