--- a/dillo/src/templates/posts/view.jade
+++ b/dillo/src/templates/posts/view.jade
@@ -243,7 +243,7 @@ link(href="https://cdnjs.cloudflare.com/ajax/libs/jquery.swipebox/1.3.0.2/css/sw
 										| {# XXX - User Setting for Social Networks #}
 										a.pop(
 											title="Share on Twitter",
-											href="https://twitter.com/home?status={{post.title}} @BlenderToday {{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug, _external=True)}} %23b3d" ,
+											href="https://twitter.com/home?status={{post.title}} @{{ config.SETTINGS_TWITTER_USERNAME }} {{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug, _external=True)}} %23b3d" ,
 											target="_blank")
 											i.fa.fa-twitter
 
