--- a/dillo/src/templates/admin/index.jade
+++ b/dillo/src/templates/admin/index.jade
@@ -56,6 +56,28 @@ style(type="text/css").
 							| {% endfor %}
 						| {% endif %}
 
+					.form-group
+						| {{ form_settings.twitter_username.label }}
+						| {{ form_settings.twitter_username(class='form-control', style="width: 100%") }}
+
+						| {% if form_settings.twitter_username.errors %}
+						ul.error
+							| {% for error in form_settings.twitter_username.errors %}
+							li {{ error }}
+							| {% endfor %}
+						| {% endif %}
+
+					.form-group
+						| {{ form_settings.keywords.label }}
+						| {{ form_settings.keywords(class='form-control', style="width: 100%") }}
+
+						| {% if form_settings.keywords.errors %}
+						ul.error
+							| {% for error in form_settings.keywords.errors %}
+							li {{ error }}
+							| {% endfor %}
+						| {% endif %}
+
 					hr
 
 					p.
