Posts listing: Replace 'text/link' with icons/favicons

--- a/dillo/src/styles/main.sass
+++ b/dillo/src/styles/main.sass
@@ -452,6 +452,10 @@ blockquote
 	& .post-index-item-details-type
 		display: inline-block
 
+		img
+			opacity: .8
+			filter: grayscale(24%)
+
 	& .post-index-item-details-comments
 		margin-right: 5px
 		& i
